# Right

./: .gitignore  CMakeLists.txt  README.md  res.qrc
res/: imaging.qml  main.qml  res.qrc
res/qml/: main.qml
resources/: imaging.qml
src/: main.cpp
src/app/: CMakeLists.txt  main.cpp
